<resources>
    <string name="app_name">zpi</string>


    // menu
    <string name="budget">Spis Wydatków</string>

    //budget
    <string name="expenses_title">Wydatki</string>
    <string name="sum">Suma</string>
    <string name="currency">zł</string>

    //searcher
    <string name="searcherTextView">Szukaj usługi</string>
    <string name="CheckListTextView">Lista zadań</string>
    <string name="localizationText">Lokalizacja:</string>
    <string name="hint_loacalization">Podaj lokalizację</string>
    <string name="hint_localization">Podaj lokalizację</string>
    <string name="subcategoryText">Podkategoria:</string>
    <string name="hint_subcategory">Podaj podkategorię</string>

    <string name="wedding_hall">SALE</string>
    <string name="music">MUZYKA</string>
    <string name="photography">FOTOGRAFIA</string>
    <string name="decorations">DEKORACJE</string>
    <string name="transport">TRANSPORT</string>
    <string name="fashion">MODA</string>
    <string name="others">INNE</string>
    <string name="name">Nazwa</string>
    <string name="localization">Lokalizacja</string>
    <string name="description">Opis</string>
    <string name="subcategory">Podkategoria</string>
    <string name="title_activity_favourites">FavouritesActivity</string>
    <string name="favourite">Ulubione</string>


</resources>
