<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_margin="5dp"
    card_view:cardBackgroundColor="@color/cardview_shadow_end_color"
    card_view:cardCornerRadius="6dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.0"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="1.0" >

        </android.support.v4.view.ViewPager>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp"
            android:padding="1dp"
            android:text="@string/name"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold"
            card_view:layout_constraintBottom_toTopOf="@+id/localization"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintHorizontal_bias="0.024"
            card_view:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/localization"
            android:layout_width="wrap_content"
            android:layout_height="23dp"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:padding="1dp"
            android:text="@string/localization"
            android:textColor="#232323"
            android:textSize="16sp"
            card_view:layout_constraintBottom_toBottomOf="@+id/viewpager"
            card_view:layout_constraintEnd_toStartOf="@+id/subcategory"
            card_view:layout_constraintHorizontal_bias="0.007"
            card_view:layout_constraintStart_toEndOf="@+id/localizationIcon" />

        <ImageView
            android:id="@+id/localizationIcon"
            android:layout_width="23dp"
            android:layout_height="23dp"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="TODO"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:srcCompat="@drawable/localization" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_alignBottom="@id/viewpager"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:focusable="true"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:srcCompat="@drawable/baseline_favorite_border_black_18dp" />

        <TextView
            android:id="@+id/subcategory"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/subcategory"
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            card_view:layout_constraintVertical_bias="1.0" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>

