<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
0
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:focusableInTouchMode="true"
        card_view:cardCornerRadius="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="237dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                card_view:defaultQueryHint="@string/hint_localization"
                card_view:iconifiedByDefault="false"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="1.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.166"
                card_view:queryHint="@string/hint_localization" />

            <TextView
                android:id="@+id/localizationTextView"
                android:layout_width="104dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/localizationText"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="0.022" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="117dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/subcategoryText"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="1.0" />

            <android.support.v7.widget.SearchView
                android:id="@+id/subcategorySearchView"
                android:layout_width="237dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                card_view:defaultQueryHint="@string/hint_subcategory"
                card_view:iconifiedByDefault="false"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.96"
                card_view:layout_constraintStart_toStartOf="@+id/textView2"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:layout_constraintVertical_bias="1.0"
                card_view:queryHint="@string/hint_subcategory" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewOfOffers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</LinearLayout>
</android.support.v4.widget.NestedScrollView>



<!--

    <?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:card_view="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_height="match_parent"
android:layout_width="match_parent">
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="5dp"
        android:focusableInTouchMode="true"
        card_view:cardCornerRadius="4dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.SearchView
                android:id="@+id/searchView"
                android:layout_width="256dp"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                card_view:defaultQueryHint="@string/hint_localization"
                card_view:iconifiedByDefault="false"
                card_view:layout_constraintBottom_toTopOf="@+id/subcategorySearchView"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintTop_toTopOf="parent"
                card_view:queryHint="@string/hint_localization" />

            <TextView
                android:id="@+id/localizationTextView"
                android:layout_width="104dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/localizationText"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="117dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/subcategoryText"
                android:textAlignment="center"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@+id/localizationTextView"
                card_view:layout_constraintVertical_bias="1.0" />

            <android.support.v7.widget.SearchView
                android:id="@+id/subcategorySearchView"
                android:layout_width="258dp"
                android:layout_height="30dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                card_view:defaultQueryHint="@string/hint_subcategory"
                card_view:iconifiedByDefault="false"
                card_view:layout_constraintBottom_toBottomOf="parent"
                card_view:layout_constraintEnd_toEndOf="parent"
                card_view:layout_constraintHorizontal_bias="0.0"
                card_view:layout_constraintStart_toEndOf="@+id/textView2"
                card_view:queryHint="@string/hint_subcategory" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewOfOffers"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />



</LinearLayout>
</android.support.v4.widget.NestedScrollView>-->
